--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -1,5 +1,5 @@
 .site-footer {
-    margin-block-start: var(--jkl-spacing-4xl);
+    margin-block-start: var(--jkl-spacing-2xl);
     padding-block: var(--jkl-spacing-2xl);
     border-top: 1px solid var(--jkl-color-border-subdued);
 }
